Disable googletest flags correctly
Disable gmock, gtest tests and gtest samples building flags correctly

--- a/Tests/CMakeLists.txt
+++ b/Tests/CMakeLists.txt
@@ -1,15 +1,15 @@
 include(FetchContent)
 
+set(BUILD_GMOCK OFF CACHE BOOL "Disable building of Google Mock")
+set(INSTALL_GTEST OFF CACHE BOOL "Disable installation of Google Test")
+set(gtest_build_tests OFF CACHE BOOL "Disable building of Google Test tests")
+set(gtest_build_samples OFF CACHE BOOL "Disable building of Google Test samples")
+
 FetchContent_Declare(
 	googletest
 	URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
 )
 FetchContent_MakeAvailable(googletest)
-
-set(BUILD_GMOCK OFF)
-set(INSTALL_GTEST OFF)
-set(gtest_build_tests OFF)
-set(gtest_build_samples OFF)
 
 add_executable(Tests main.cpp)
 
